# video-summarizer-app

./: README.md  app.py  index.html  pyproject.toml  requirements.txt  run.sh  vercel.json
