[project]
name = "video-summarizer-app"
version = "0.1.0"

[tool.poetry]
name = "video-summarizer-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.x"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
